--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "nodemon": "^3.1.4",
     "vue-router": "^4.4.3",
     "vuex": "^4.1.0"
   }
